# spectre

./: .env.example  .gitignore  .mcp.json  ADR.md  ADR_REFERENCE.md  AGENTS.md  Cargo.toml  Dockerfile  INTEGRATION.md  NIX_VS_DOCKER.md  ROADMAP.md  STATUS.md  docker-compose.yml  flake.nix  neutron.code-workspace  prometheus.yml
.github/workflows/: ci.yml
config/: Caddyfile  alerts.yml  jetstream-streams.json  loki-config.yml  nats-server.conf  promtail-config.yml
config/grafana/dashboards/: ai-agent-os-system-metrics.json  voidnxlabs-overview.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/nkeys/: .gitignore  example.nk.example
crates/spectre-core/: Cargo.toml
crates/spectre-core/src/: config.rs  error.rs  lib.rs  logging.rs  types.rs
crates/spectre-events/: Cargo.toml
crates/spectre-events/src/: client.rs  event.rs  subscriber.rs
crates/spectre-events/tests/: event_bus_test.rs
crates/spectre-observability/: Cargo.toml
crates/spectre-observability/src/: lib.rs  metrics.rs
crates/spectre-proxy/: Cargo.toml
crates/spectre-proxy/src/: auth.rs  circuit.rs  error.rs  gateway.rs  lib.rs  main.rs  routes.rs  tls.rs
crates/spectre-proxy/tests/: integration_test.rs
crates/spectre-secrets/: Cargo.toml
crates/spectre-secrets/src/: crypto.rs  lib.rs  rotation.rs  storage.rs
crates/spectre-secrets/tests/: rotation_test.rs
nix/kubernetes/: default.nix  deployment.nix  nats.nix  neutron-stub.nix  service-profile.nix
scripts/: clone-domain-projects.sh  e2e_test.py  init-timescaledb.sql  run-tests.sh  security-audit-dos.sh  security-audit-jwt.sh  security-audit-ratelimit.sh  security-audit-rbac.sh  security-audit-secrets.sh
specs/: 000-VISION-AND-INSIGHTS.md  004-mlops-telemetry-agents.md
tests/: README.md
tests/integration/: test_event_bus.rs
tools/ai-agent-metrics-bridge/: Dockerfile  bridge.py  requirements.txt
