# SPECTRE Fleet - Enterprise-Grade AI Agent Framework
# Event-Driven Microservices Architecture with Zero-Trust Governance

[workspace]
resolver = "2"
members = [
    # Core Infrastructure (NEW)
    "crates/spectre-core",
    "crates/spectre-events",
    "crates/spectre-proxy",
    "crates/spectre-secrets",
    "crates/spectre-observability",

    # Domain Services (Existing projects - to be migrated)
    # "crates/agent-os/*",
    # "crates/orchestration/*",
    # "crates/llm-gateway/*",
    # "crates/ml-inference/*",
    # "crates/vault/*",
    # "crates/tauri-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kernelcore"]
license = "MIT"
repository = "https://github.com/kernelcore/spectre"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# NATS client
async-nats = "0.33"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID for correlation/trace IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP/gRPC
axum = "0.7"
tonic = "0.11"
tonic-build = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres"] }
neo4rs = "0.7"

# Security & Crypto
rustls = "0.22"
argon2 = "0.5"
aes-gcm = "0.10"
ed25519-dalek = "2.1"
blake3 = "1.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Observability
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"
prometheus = "0.13"

# Testing
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true
