[package]
name = "spectre-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "spectre_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# Hex encoding for TraceId
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
