[package]
name = "spectre-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spectre-core = { path = "../spectre-core" }

# Tracing ecosystem
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "registry"] }
tracing-opentelemetry.workspace = true

# OpenTelemetry ecosystem
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true

# Metrics
prometheus.workspace = true

# Async & Serialization
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
