[package]
name = "spectre-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
rustls-pemfile = "2"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spectre-core = { path = "../spectre-core" }
spectre-secrets = { path = "../spectre-secrets" }
spectre-events = { path = "../spectre-events" }
spectre-observability = { path = "../spectre-observability" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "auth", "cors"] }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
jsonwebtoken = "10.3"
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
