[package]
name = "spectre-secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
secrecy = { version = "0.8", features = ["serde"] }
tracing = { workspace = true }
dotenv = "0.15"
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
